<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:background="@drawable/gradient_background"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="526dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/nlu_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_rounded"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/nlu_test"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/navigation_scene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_rounded"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/navigation"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_voice_qa_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_rounded"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/voice_qa_entry"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_audio_qa_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_rounded"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/audio_qa_entry"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_speech_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_rounded"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/speech_entry"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorExit"
        android:text="@string/exit"
        android:textColor="#FFFFFF" />
</FrameLayout>
